# SKN16-4th-1Team

./: .env.example  DB_Schema.csv  README.md  db_demo.sqlite3  prd.md  requirements.txt
cartoon_diary/: pyproject.toml
cartoon_diary/apps/accounts/: views.py
cartoon_diary/apps/dashboard/: views.py
cartoon_diary/apps/diaries/api/: __init__.py  serializers.py  urls.py  views.py
cartoon_diary/apps/generation/: tasks.py
cartoon_diary/config/: urls.py
cartoon_diary/config/settings/: base.py  dev.py
cartoon_diary/config/settings/components/: storage.py
cartoon_diary/docs/adr/: ADR-0001-fastapi-routers-for-mvp.md  ADR-0002-jwt-authentication.md  ADR-0003-inmemory-store-for-mvp.md  ADR-0004-requirements-layout.md  ADR-0005-task-processing-stub.md
cartoon_diary/docs/api/: Bootstrap.py  Cartoons.py  Diaries.py  Profile.py  Tasks.py  __init__.py  auth.py  common.py
cartoon_diary/integrations/: huggingface_client.py  image_postprocess.py  openai_client.py  retry.py
cartoon_diary/requirements/: base.txt  prod.txt
cartoon_diary/scripts/: load_test_data.py  manage_diary_jobs.py
cartoon_diary/templates/: base.html
cartoon_diary/templates/dashboard/: index.html
cartoon_diary/templates/diaries/: calendar.html
cartoon_diary/tests/: conftest.py  factories.py
cartoon_diary/tests/apps/accounts/: test_api.py
cartoon_diary/tests/apps/diaries/: test_services.py
cartoon_diary/tests/apps/generation/: test_services.py
cartoon_diary/workers/: __init__.py  queues.py  schedules.py
diary/: settings.py  urls.py
entry/: admin.py  forms.py  models.py  urls.py  (+1 more)
(+19 files in other folders)
