[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cartoon-diary"
version = "0.1.0"
description = "4-cut diary cartoon generator web app scaffold."
readme = "../README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

